<resources>
    <string name="app_name">MnyMngApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Money Manager</string>
    <string name="nav_header_subtitle">Track your finances</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <!-- Side nav items -->
    <string name="menu_dashboard">Dashboards</string>
    <string name="menu_expense">Expense</string>
    <string name="menu_mtm">MTM</string>
    <string name="menu_income">Income</string>
    <string name="menu_investments">Investments</string>
    <string name="menu_lend">Lend</string>
    <string name="menu_loan">Loan</string>
    <string name="menu_asset">Asset</string>
    <string name="menu_trip">Trip</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="dashboard_expense_analysis_loading">Expense Analysis: Loading...</string>
    <string name="dashboard_investment_growth_loading">Investment Growth: Loading...</string>
    <string name="expense_view_title">Expense View</string>
    <string name="fab_add_expense_content_description">Add new expense</string>
    <string name="mtm_fragment_placeholder">Hello Mtm Fragment</string>
    <string name="income_fragment_placeholder">Hello Income Fragment</string>
    <string name="investments_fragment_placeholder">Hello Investments Fragment</string>
    <string name="lend_fragment_placeholder">Hello Lend Fragment</string>
    <string name="loan_fragment_placeholder">Hello Loan Fragment</string>
    <string name="asset_fragment_placeholder">Hello Asset Fragment</string>
    <string name="trip_fragment_placeholder">Hello Trip Fragment</string>


        <string name="label_account">Account:</string>
        <string name="label_transaction_type">Transaction Type:</string>
        <string name="label_amount">Amount:</string>
        <string name="hint_enter_amount">Enter amount</string>
        <string name="label_date">Date:</string>
        <string name="hint_select_date">Select date</string>
        <string name="label_note">Note:</string>
        <string name="hint_enter_note">Enter note</string>
        <string name="label_recurring">Recurring:</string>
        <string name="label_related_account">Related Account (for transfers):</string>
    <string name="label_recurring_end_date">End Date:</string>
    <string name="hint_select_recurring_end_date">Select end date (optional)</string>
    <string name="filter_by_label">Filter by:</string>
    <string name="sort_by_label">Sort by:</string>
    <string-array name="filter_options">
        <item>This Month</item>
        <item>Last Month</item>
        <item>This Year</item>
        <item>Last Year</item>
        <item>Custom Date Range...</item> <!-- New option -->
    </string-array>

    <string-array name="sort_options">
        <item>Time (Newest First)</item>
        <item>Time (Oldest First)</item>
        <item>Amount (High to Low)</item>
        <item>Amount (Low to High)</item>
    </string-array>

    <!-- IMPORTANT: Replace "YOUR_WEB_CLIENT_ID" with your actual Web Client ID from the Google API Console -->
    <string name="default_web_client_id" translatable="false">YOUR_WEB_CLIENT_ID</string>

</resources>