<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/fragment_dashboard"
            android:title="@string/menu_dashboard" />
    </group>

    <item
        android:id="@+id/accounts_group"
        android:title="Accounts">
        <menu>
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/fragment_bank"
                android:title="Bank" />
            <item
                android:id="@+id/fragment_wallet"
                android:title="Wallet" />
            <item
                android:id="@+id/fragment_loan"
                android:title="Loan" />
            <item
                android:id="@+id/fragment_lending"
                android:title="Lending" />
            <item
                android:id="@+id/fragment_credit_card"
                android:title="Credit Card" />
            <item
                android:id="@+id/fragment_investment"
                android:title="Investment" />
            <item
                android:id="@+id/fragment_insurance"
                android:title="Insurance" />
            <item
                android:id="@+id/fragment_e_wallet"
                android:title="E Wallet" />
            <item
                android:id="@+id/fragment_asset"
                android:title="Other Asset" />
            </group>
        </menu>
    </item>


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/fragment_income"
            android:title="@string/menu_income" />
        <item
            android:id="@+id/fragment_expense"
            android:title="@string/menu_expense" />
        <item
            android:id="@+id/fragment_trip"
            android:title="@string/menu_trip" />
    </group>
</menu>