<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/fragment_dashboard">

    <fragment
        android:id="@+id/fragment_dashboard"
        android:name="com.example.mnymng.fragments.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/fragment_expense"
        android:name="com.example.mnymng.fragments.TransactionTypeFragment"
        android:label="@string/menu_expense"
        tools:layout="@layout/fragment_common">
        <argument
            android:name="transaction_type"
            app:argType="com.example.mnymng.DB.enums.CategoryType"
            android:defaultValue="EXPENSE" />
    </fragment>

    <fragment
        android:id="@+id/accountTransactionFragment"
        android:name="com.example.mnymng.fragments.TransactionTypeFragment"
        tools:layout="@layout/fragment_common"/>

    <fragment
        android:id="@+id/fragment_income"
        android:name="com.example.mnymng.fragments.TransactionTypeFragment"
        android:label="@string/menu_income"
        tools:layout="@layout/fragment_common">
        <action
            android:id="@+id/action_accountsFragment_to_accountTransactionFragment"
            app:destination="@id/accountTransactionFragment" />
        <argument
            android:name="transaction_type"
            app:argType="com.example.mnymng.DB.enums.CategoryType"
            android:defaultValue="INCOME" />
    </fragment>

    <fragment
        android:id="@+id/fragment_investment"
        android:name="com.example.mnymng.fragments.AccountsFragment"
        android:label="@string/menu_investments"
        tools:layout="@layout/fragment_common">
        <action
            android:id="@+id/action_accountsFragment_to_accountTransactionFragment"
            app:destination="@id/accountTransactionFragment" />
        <argument
            android:name="account_type"
            app:argType="com.example.mnymng.DB.enums.AccountType"
            android:defaultValue="INVESTMENT" />
    </fragment>
    <fragment
        android:id="@+id/fragment_insurance"
        android:name="com.example.mnymng.fragments.AccountsFragment"
        android:label="Insurance"
        tools:layout="@layout/fragment_common">
        <action
            android:id="@+id/action_accountsFragment_to_accountTransactionFragment"
            app:destination="@id/accountTransactionFragment" />
        <argument
            android:name="account_type"
            app:argType="com.example.mnymng.DB.enums.AccountType"
            android:defaultValue="INSURANCE" />
    </fragment>


    <fragment
        android:id="@+id/fragment_lending"
        android:name="com.example.mnymng.fragments.AccountsFragment"
        android:label="@string/menu_lend"
        tools:layout="@layout/fragment_common">
        <action
            android:id="@+id/action_accountsFragment_to_accountTransactionFragment"
            app:destination="@id/accountTransactionFragment" />
        <argument
            android:name="account_type"
            app:argType="com.example.mnymng.DB.enums.AccountType"
            android:defaultValue="LENDING" />
    </fragment>

    <fragment
        android:id="@+id/fragment_loan"
        android:name="com.example.mnymng.fragments.AccountsFragment"
        android:label="@string/menu_loan"
        tools:layout="@layout/fragment_common">
        <action
            android:id="@+id/action_accountsFragment_to_accountTransactionFragment"
            app:destination="@id/accountTransactionFragment" />
        <argument
            android:name="account_type"
            app:argType="com.example.mnymng.DB.enums.AccountType"
            android:defaultValue="LOAN" />
    </fragment>

    <fragment
        android:id="@+id/fragment_asset"
        android:name="com.example.mnymng.fragments.AccountsFragment"
        android:label="@string/menu_asset"
        tools:layout="@layout/fragment_common">
        <action
            android:id="@+id/action_accountsFragment_to_accountTransactionFragment"
            app:destination="@id/accountTransactionFragment" />
        <argument
            android:name="account_type"
            app:argType="com.example.mnymng.DB.enums.AccountType"
            android:defaultValue="OTHER_ASSET" />
    </fragment>
    <fragment
        android:id="@+id/fragment_bank"
        android:name="com.example.mnymng.fragments.AccountsFragment"
        android:label="Bank"
        tools:layout="@layout/fragment_common">
        <action
            android:id="@+id/action_accountsFragment_to_accountTransactionFragment"
            app:destination="@id/accountTransactionFragment" />
        <argument
            android:name="account_type"
            app:argType="com.example.mnymng.DB.enums.AccountType"
            android:defaultValue="BANK" />
    </fragment>

    <fragment
        android:id="@+id/fragment_wallet"
        android:name="com.example.mnymng.fragments.AccountsFragment"
        android:label="Wallet"
        tools:layout="@layout/fragment_common">
        <action
            android:id="@+id/action_accountsFragment_to_accountTransactionFragment"
            app:destination="@id/accountTransactionFragment" />
        <argument
            android:name="account_type"
            app:argType="com.example.mnymng.DB.enums.AccountType"
            android:defaultValue="WALLET" />
    </fragment>

    <fragment
        android:id="@+id/fragment_credit_card"
        android:name="com.example.mnymng.fragments.AccountsFragment"
        android:label="Credit Card"
        tools:layout="@layout/fragment_common">
        <action
            android:id="@+id/action_accountsFragment_to_accountTransactionFragment"
            app:destination="@id/accountTransactionFragment" />
        <argument
            android:name="account_type"
            app:argType="com.example.mnymng.DB.enums.AccountType"
            android:defaultValue="CREDIT_CARD" />
    </fragment>

    <fragment
        android:id="@+id/fragment_e_wallet"
        android:name="com.example.mnymng.fragments.AccountsFragment"
        android:label="E-Wallet"
        tools:layout="@layout/fragment_common">
        <action
            android:id="@+id/action_accountsFragment_to_accountTransactionFragment"
            app:destination="@id/accountTransactionFragment" />
        <argument
            android:name="account_type"
            app:argType="com.example.mnymng.DB.enums.AccountType"
            android:defaultValue="E_WALLET" />
    </fragment>
    <fragment
        android:id="@+id/fragment_trip"
        android:name="com.example.mnymng.fragments.TripFragment"
        android:label="@string/menu_trip"
        tools:layout="@layout/fragment_common" />

    <!-- Added for Accounts submenu -->

    <fragment
        android:id="@+id/action_notification"
        android:name="com.example.mnymng.fragments.NotificationFragment"
        android:label="Notifications"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/action_profile"
        android:name="com.example.mnymng.fragments.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/action_settings"
        android:name="com.example.mnymng.fragments.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/action_about_us"
        android:name="com.example.mnymng.fragments.AboutUsFragment"
        android:label="About Us"
        tools:layout="@layout/fragment_about_us" />

</navigation>
